# blender_enhanced_svg

./: .gitignore  README.md  __init__.py  align.py  blender_manifest.toml  build.py  hi.ipynb  imports.py  pyproject.toml  svg_preprocessing.py  text_to_path.py  text_to_pathC.ipynb  text_to_path_nb.ipynb
.github/workflows/: ci.yml  release.yml  upload.yml
enhanced_svg/: __init__.py  blender_manifest.toml  build.py  image_import.py  imports.py  svg_preprocessing.py  text_to_path.py  utils.py  z_offset.py
tests/: run.py  test_image_import.py
